# protoc_toolchains_for_proto_library

./: MODULE.bazel
legacy_toolchains/: BUILD.bazel
src/: BUILD.bazel  sample.proto
